feat(user-signup): implement user signup feature
- set up the components that make up the frontend
- make the connection to the backend to register a user
- style the sign up page using sass

[Delivers #164040607]

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,8 @@
-@import './base/settings';
+@import './base/variables';
 @import './base/base';
+
+@import './components/authForm';
+@import './components/header';
+
+@import './utilities/loader';
+@import './utilities/toaster';
