feat(create report): enable users make a report
- users can make a report by filling the form

[Delivers #164040787]

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,9 @@
 
 @import './components/authForm';
 @import './components/header';
+@import './components/googlemap';
+
+@import './pages/createReport.scss';
 
 @import './utilities/loader';
 @import './utilities/toaster';
