--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,25 +1,27 @@
 body {
   background-color: $base-background-color;
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
   color: $color-grey-dark;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  overflow-x: hidden;
   padding: 3rem;
 }
 
 *,
 *::after,
 *::before {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html {
     // This defines what 1rem is
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 .is-active {
