--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 // COLOR SETTINGS
 // $base-background-color: #f1f2f6;
-$base-background-color: #ffffff;
-$red: #ff0000;
+$base-background-color: #fff;
+$red: #f00;
 
 // FONT SETTINGS
 $font-family: Arial, Helvetica, sans-serif;
