--- a/src/styles/components/_authForm.scss
+++ b/src/styles/components/_authForm.scss
@@ -1,33 +1,35 @@
 .container {
   // border: 1px solid black;
-  height: 90vh;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 90vh;
   justify-content: center;
 
   &__form {
     // margin: 1rem auto;
     // border: 1px solid red;
-    width: 50%;
+    align-items: center;
     display: flex;
     flex-direction: column;
     padding: 1rem auto;
-    align-items: center;
+    width: 50%;
 
     &-input {
       display: block;
+      font-size: 1.5rem;
       height: 5rem;
       margin: 1rem;
-      font-size: 1.5rem;
       padding-left: 1rem;
       width: 80%;
       
     }
+
     &-btn {
+      cursor: pointer;
+      font-size: 1.7rem;
       height: 5rem;
       margin: 1rem;
-      font-size: 1.7rem;
       width: 80%;
     }
   }
