--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,8 +1,8 @@
 .header-ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
+  padding: 0;
 
   li {
     float: right;
@@ -10,14 +10,15 @@
 
   .header-NavLink {
     // border: 1px solid black;
+  border-bottom: .2rem solid transparent;
   display: block;
-  text-align: center;
   padding: 0 3rem;
+  text-align: center;
   text-decoration: none;
   }
 
   .header-NavLink:hover {
-    border-bottom: .2rem solid red;
+    border-bottom: .2rem solid #ff0000;
   }
 
 }
