--- a/src/styles/utilities/_loader.scss
+++ b/src/styles/utilities/_loader.scss
@@ -4,10 +4,10 @@
   display: flex;
   height: 100%;
   justify-content: center;
+  left: 0;
   overflow: hidden;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
   width: 100%;
   z-index: 99;
 }
