feat(design homepage): design the home page of the application
- set the header in position
- design the main view, the about section and our-stories section
- design the footer

[Delivers #165490013]

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,6 +2,7 @@
 // $base-background-color: #f1f2f6;
 $base-background-color: #fff;
 $red: #f00;
+$color-red: #e8491d;
 
 // FONT SETTINGS
 $font-family: Arial, Helvetica, sans-serif;
@@ -25,6 +26,7 @@ $color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
+$color-shaded-black: #1C1C1C;
 
 // FONT
 $default-font-size: 1.6rem;
