--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   overflow-x: hidden;
-  padding: 3rem;
 }
 
 *,
@@ -25,5 +24,5 @@ html {
 }
 
 .is-active {
-  color: $red;
+  color: $color-red !important;
 }
