feat(style pages): style all pages to meet the mvp
- style all pages using scss
- srite component testing for the components

[Delivers [#165660137]

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -25,6 +25,7 @@ $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
 $color-white: #fff;
+$color-yellow: #ff0;
 $color-black: #000;
 $color-shaded-black: #1C1C1C;
 
