--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,11 +2,12 @@ body {
   background-color: $base-background-color;
   box-sizing: border-box;
   color: $color-grey-dark;
-  font-family: "Lato", sans-serif;
+  // font-family: "Lato", sans-serif;
   font-size: 16px;
-  font-weight: 400;
+  // font-weight: 400;
   line-height: 1.7;
   overflow-x: hidden;
+  //  background-image: linear-gradient(to right, white, grey);
 }
 
 *,
@@ -25,4 +26,10 @@ html {
 
 .is-active {
   color: $color-red !important;
+}
+
+ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
