--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,17 +1,13 @@
 
 .logo {
   font-family: Arial, Helvetica, sans-serif;
-  border-top: 5px solid transparent;
-  border-right: 5px solid white;
-  border-top: 3px solid white;
-  border-left: 1px solid white;
-  border-radius: 60%;
   padding: 0 0;
   width: 12em;
-  height: 50px;
   cursor: pointer;
   &__h1 {
     font-size: 3em;
+    margin: 0 0;
+    padding: 0 0;
     &--link-on-black {
       color: $color-red;
       text-decoration: none;
