--- a/src/styles/components/_sectionMainView.scss
+++ b/src/styles/components/_sectionMainView.scss
@@ -1,37 +1,31 @@
 .main-section {
   border: 1px solid black;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column; 
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   background-image: linear-gradient(to bottom,
   rgba(0, 0, 0, 1),
-  rgba(0, 0, 0, 0.6)),
+  rgba(0, 0, 0, 0.6ß)),
   url('https://res.cloudinary.com/dmx0a3nqi/image/upload/v1555925449/lion-3576045_1920.jpg');
   background-position: center;
   background-size: cover;
 }
 
-.mission-statement {
-  border: 1px solid black;
-  background-color: grey;
-  padding: 24px 0 24px 0;
-  width: 79%;
-}
-
 .mission-statement-big {
   font-size: 55px;
+  margin-top: 15%;
   margin-bottom: 15px;
   animation: moveInLeft 1s ease-out;
-  background-image: linear-gradient(to right, #ffffff, yellow);
+  background-image: linear-gradient(to right, $color-white, $color-yellow);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   
   &__style-ireporter {
-    border-top: 1px solid yellow;
-    border-right: 1px solid yellow;
+    border-top: 1px solid $color-yellow;
+    border-right: 1px solid $color-yellow;
     padding-right: 0.2em;
     
     &--style-i {
@@ -49,11 +43,11 @@
   }
 
   &__style-africa {
-    border-bottom: 1px solid yellow;
+    border-bottom: 1px solid $color-yellow;
     padding-left: 50px;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: yellow;
+    color: $color-yellow;
   }
 }
 
@@ -62,12 +56,21 @@
   text-align: center;
   font-size: 20px;
   letter-spacing: 5px;
-  background-image: linear-gradient(to right, #ffffff, yellow);
+  background-image: linear-gradient(to right, $color-white, $color-yellow);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   animation: moveInFromBelow .5s ease-out .75s;
   animation-fill-mode: backwards
+}
+
+@media only screen and (max-width: 920px) {
+  .main-section {
+    justify-content: center;
+  }
+  .mission-statement-big {
+    margin-top: 0;
+  }
 }
 
 @media only screen and (max-width: 600px) {
