ft(admin-page): implement admin report management feature
- create the table for all reports
- fetch and render data on the table
- implement feature to allow admin change status of reports

[Delivers #164041103]

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -24,7 +24,7 @@ $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
-$color-white: #fff;
+$color-white: rgba(255, 255, 255, 0.8);
 $color-yellow: #ff0;
 $color-black: #000;
 $color-shaded-black: #1C1C1C;
