--- a/src/styles/components/_cardStory.scss
+++ b/src/styles/components/_cardStory.scss
@@ -2,7 +2,7 @@
   min-height: 10em;
   width: 23.3em;
   text-align: center;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  // border: 1px solid rgba(0, 0, 0, 0.2);
 
   &__img {
     width: 100%;
@@ -11,4 +11,19 @@
   .link-on-black {
     color: $color-shaded-black;
   }
+}
+
+.card__img-container {
+   border-bottom: 3px solid $color-red;
+   border-right: 3px solid $color-red;
+   height: 15em;
+   overflow: hidden;
+   border-radius: 3px;
+  }
+  
+  .card__text-container {
+    // border-top: 3px solid $color-red;
+    border-left: 3px solid $color-red;
+    border-radius: 3px;
+    color: $color-shaded-black;
 }
