--- a/src/styles/components/_reportRow.scss
+++ b/src/styles/components/_reportRow.scss
@@ -1,66 +1,55 @@
-.section-admin {
-    padding: 5px;
-    /* border: 1px solid silver; */}
-.section-admin-wrapper-div {
-    padding: 5px;
-    /* border: 1px solid silver; */}
-.section-admin .flex-box-main {
-    overflow-x: auto;
-    padding: 5px;
-    /* border: 1px solid silver; */
-    display: grid;
-    grid-row-gap: 1rem;
-    margin-top: 2rem;
-    grid-template-rows: 50px auto;}
-.section-admin .flex-box-main .row-1-of-3 {
-    padding: 5px;
-    /* border: 1px solid silver; */
-    width: 100%;
-    margin: 0 auto;
-    /* overflow-x: auto; */}
-#table-wrapper {
-    border: none;}
 .table-admin {
-    width: 90%;
-    margin: 0 auto;
-    border-collapse: collapse;}
-.table-admin .row {
-    height: 30px;
-    /* background-color: silver; */}
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+.table-admin .row:not(:first-child) {
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-style: italic;
+  font-size: 1em;
+  color: $color-shaded-black;
+}
 .table-admin .row:first-child {
-    background-color: #35424a;
-    color: white;
-    /* text-transform: uppercase; */
-    font-weight: 700;}
+  background-color: $color-shaded-black;
+  color: $color-white;
+  height: 5em;
+  text-align: center;
+}
 .table-admin tr:nth-child(odd) {
-    background-color: #f2f2f2;}
+  background-color: rgba(128, 128, 128, .2);
+}
 .table-admin .row .cell {
-    padding: 0 0.5rem 0 .5rem;
-    border: 1px solid silver;}
-.comment-and-media-link {
-    text-decoration: none;
-    color: black;
-    display: block;
-    font-style: italic;
-    /* padding: 2px 15px; */
-    margin: 0 auto;
-    /* text-align: center; */
-    font-weight: bold;}
-select {
-    padding: 2px;
-    margin: 5px 0 5px 0;
-    width: 100%;}
-.btn-delete-record {
-    font-size: 2rem;
-    color: #e8491d;
-    text-decoration: none;
-    display: block !important;
-    width: 100%;
-    text-align: center;
-    line-height: 1;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;}
-#div-table-title {
-    text-align: center;
-    /* padding-bottom: 4rem; */}
+  padding: 0 0.5rem 0 0.5rem;
+  border: 1px solid $color-white;
+}
+
+.select {
+  color: black;
+  padding: 5px;
+  margin: 5px 0 5px 0;
+  width: 100%;
+  border-radius: none;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  outline: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+.rejected {
+  background-color: salmon;
+}
+.resolved {
+  background-color: lightgreen;
+}
+
+.draft {
+  background-color: transparent;
+}
+
+.under-investigation {
+  background-color: yellow;
+}
