ft(edit report): implement report edit functionality
- enable user to change location and comment
- enable user to upload image when creating a report
- implement error and success alert messages

[Delivers #164040869]

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -21,7 +21,7 @@
   border-radius: 0.5em;
   display: flex;
   flex-direction: column;
-  min-height: 50%;
+  height: 50%;
   justify-content: center;
   width: 60em;
   position: relative;
@@ -41,6 +41,8 @@
 
   &__img {
     display: block;
+    width: 30%;
+    height: 100%;
   }
 
   &__text {
