--- a/src/styles/pages/_pageAdmin.scss
+++ b/src/styles/pages/_pageAdmin.scss
@@ -1,7 +1,7 @@
 .admin-page {
   background-image: linear-gradient(to right, white, grey);
   min-height: 100vh;
-  padding-top: 4em;
+  padding: 4em 0 4em;
   
   &__table-wrapper {
     display: flex;
