--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,21 +2,24 @@
 @import './base/base';
 
 @import './components//adminTable';
+@import './components/alert';
 @import './components/authForm';
 @import './components/cardStory.scss';
-@import './components/cardSingleReport';
 @import './components/clickable';
 @import './components/footer';
 @import './components/googlemap';
 @import './components/header';
+@import './components/imageUploader';
 @import './components/logo';
 @import './components/modal';
 @import './components/reportRow';
 @import './components/sectionMainView';
 @import './components/sectionWhatWeDo';
 @import './components/sectionOurStories';
+@import './components/singleReport';
 
 @import './pages/pageAdmin';
+@import './pages/pageCreateReport';
 @import './pages/createReport';
 @import './pages/pageHomePage';
 @import './pages/pageViewAllReports';
