--- a/src/styles/pages/_createReport.scss
+++ b/src/styles/pages/_createReport.scss
@@ -1,37 +1,20 @@
-.report-container {
-  // background: lightblue;
-  // width: 80%;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  margin: 5rem auto;
-
-  &__header {
-    // margin: 0 auto;
-  }
-}
-
 .report-form {
-  // border: 1px solid salmon;
   align-items: center;
   display: flex;
   flex-direction: column;
   padding: 1rem auto;
-  width: 50%;
+  width: 80%;
 
   &__radio-container {
     border: 1px solid #000000;
     display: flex;
     height: 5rem;
-    // font-size: 1.5rem;
-    // padding-left: 1rem;
     justify-content: space-around;
     margin: 1rem;
     width: 80%;
+    color: black;
 
     &-radio {
-      // border: 2px solid black;
-      // display: block;
       cursor: pointer;
       margin-right: 1rem;
       margin-top: 2rem;
@@ -44,27 +27,78 @@
     }
   }
 
-    &__input {
-      display: block;
+  &__input {
+    // border: 1px solid rgba(255, 255, 255, .8);
+    border: 1px solid black;
+    display: block;
+    font-size: 1.5rem;
+    height: 5rem;
+    margin: 1rem;
+    padding-left: 1rem;
+    width: 80%;
+    outline: none;
+    // background-color: #e8f0fe;
+    background-color: transparent;
+    // border-radius: 20px;
+
+    &-textarea {
       font-size: 1.5rem;
-      height: 5rem;
-      margin: 1rem;
+      min-height: 20rem;
       padding-left: 1rem;
       width: 80%;
+      outline: none;
+      // background-color: #e8f0fe;
+      background-color: transparent;
+       border: 1px solid black;
+       padding: 1em;
 
-      &-textarea {
-        font-size: 1.5rem;
-        min-height: 20rem;
-        padding-left: 1rem;
-        width: 80%;
-      }
-    }
-
-    &__button {
-      cursor: pointer;
-      font-size: 1.7rem;
-      height: 5rem;
-      margin: 1rem;
-      width: 80%;
     }
   }
+
+  &__button {
+    background-color: $color-red;
+    color: white;
+    cursor: pointer;
+    font-size: 1.7rem;
+    height: 5rem;
+    margin: 1rem;
+    width: 60%;
+  }
+}
+
+.report-form-image-upload-input {
+  display: none;
+}
+
+.form-report-image-container {
+  width: 20rem;
+  height: 20rem;
+  overflow: hidden;
+  position: absolute;
+  top: 18em;
+  left: 3em;
+  cursor: pointer;
+
+  &__add-image {
+    position: absolute;
+    letter-spacing: 0.5px;
+    top: 59%;
+    left: 23%;
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  &__selected-image {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+
+  &__btn-upload {
+    display: block;
+    position: absolute;
+    top: 10em;
+    left: 10em;
+  }
+}
