--- a/src/styles/components/_authForm.scss
+++ b/src/styles/components/_authForm.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem auto;
-    width: 50%;
+    width: 70%;
 
     &-input {
       display: block;
@@ -19,15 +19,33 @@
       margin: 1rem;
       padding-left: 1rem;
       width: 80%;
-      
     }
 
     &-btn {
       cursor: pointer;
       font-size: 1.7rem;
+      font-weight: bold;
       height: 5rem;
       margin: 1rem;
       width: 80%;
+      background-color: $color-red;
+      color: white;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .container {
+    height: 100vh;
+    &__form {
+      width: 80%;
+      &-input {
+        width: 100%;
+        border: 1px solid rgba(0, 0, 0, .5);
+      }
+      &-btn {
+        width: 100%;
+      }
     }
   }
 }
