--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .section-footer {
-  height: 50vh;
+  height: 15vh;
   background-color: $color-shaded-black;
   display: flex;
   flex-direction: column;
@@ -17,9 +17,10 @@
   }
 
   &-content {
+    display: none;
     font-size: 1.5em;
     margin-top: 2em;
-    display: flex;
+    // display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 5em;
