--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -116,3 +116,14 @@ label {
     background-color: $color-shaded-black;
   }
 }
+
+
+@media only screen and (max-width: 800px) {
+  .header {
+    padding: 0;
+  }
+  .header-logo {
+    transform: scale(.5);
+    margin-left: 0;
+  }
+}
