--- a/src/styles/pages/_pageCreateReport.scss
+++ b/src/styles/pages/_pageCreateReport.scss
@@ -1,5 +1,5 @@
 .report-container {
-    // background-image: linear-gradient(to right, white, grey);
+  // background-image: linear-gradient(to right, white, grey);
   height: 100vh;
   align-items: center;
   justify-content: center;
@@ -14,5 +14,26 @@
     letter-spacing: 2px;
     margin-bottom: 2em;
     color: $color-shaded-black;
+  }
+}
+
+@media only screen and (max-width: 714px) {
+  .report-container {
+    // background-image: linear-gradient(to right, white, grey);
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    &__header {
+      font-size: 1.5rem;
+      font-weight: 700;
+      display: inline-block;
+      transform: scale(1.6);
+      letter-spacing: 0px;
+      margin-bottom: 2em;
+      color: $color-shaded-black;
+    }
   }
 }
