bg(fix-geolocation-cross-browser): fix geolocation to work on Firefox and safari
- replace @google/maps client with the frontend api for geolocation (maps.googleapis.com)
- make the request to the api, get the location and render on the location input field

[Finishes #165929478]

--- a/src/styles/pages/_createReport.scss
+++ b/src/styles/pages/_createReport.scss
@@ -35,9 +35,13 @@
     padding-left: 1rem;
     width: 80%;
     outline: none;
-    // background-color: #e8f0fe;
+    // background-color: #e8f0f0e;
     background-color: transparent;
     // border-radius: 20px;
+
+    &-coordinates {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
 
     &-textarea {
       font-size: 1.5rem;
