--- a/src/styles/components/_sectionMainView.scss
+++ b/src/styles/components/_sectionMainView.scss
@@ -7,7 +7,7 @@
   // justify-content: center;
   background-image: linear-gradient(to bottom,
   rgba(0, 0, 0, 1),
-  rgba(0, 0, 0, 0.6ß)),
+  rgba(0, 0, 0, 0.6)),
   url('https://res.cloudinary.com/dmx0a3nqi/image/upload/v1555925449/lion-3576045_1920.jpg');
   background-position: center;
   background-size: cover;
